syntax = "proto3";
package evented.business;
option go_package = "evented.business";

import "evented.proto";

message BusinessCommand {
    Snapshot snapshot = 1;
    Events events = 2;
    Command command = 3;
}

message BusinessResponse {
    Snapshot snapshot = 1;
    Events events = 2;
}

service BusinessLogic {
    rpc Handle (BusinessCommand) returns (BusinessResponse) {}
}
